# perfetto_streaming_example

./: .gitmodules  CMakeLists.txt  LICENSE  build.sh  demo_recv_perfetto_tracepacket.py  main.cpp  readme-zh.md  readme.md  run.sh  streaming.cc
